fix button align

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body {
 }
 
 .entrar {
-  margin-left: 80px;
+  margin-left: 85px;
   cursor: pointer;
   border: 0;
   font-family: 'Jost';
